# groww-mcp

./: .env.example  README.md  pyproject.toml
scripts/: test_connection.py
src/: auth.py  config.py  evaluation.py  paper_engine.py  safety.py  server.py
src/tools/: analysis.py  evaluation.py  market.py  portfolio.py  trading.py
tests/: conftest.py  test_analysis.py  test_auth.py  test_evaluation.py  test_market.py  test_paper_engine.py  test_portfolio.py  test_safety.py  test_trading.py
